# 13CAD

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  ModelLoader  NEWS.md  README.md  TEAM.md  Test_ModelLoader  cmake_install.cmake  docs-gen-deploy.sh  github-update.txt
Worksheet6/: CMakeLists.txt  vtk_cube.cpp
Worksheet6/qtvtk-master/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Cube.sln  Cube.vcxproj  Cube.vcxproj.filters  Worksheet6Readme.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  mainwindow.cpp  mainwindow.h  resource.qrc
demos/: README.md  demo_vector.cpp
html/: annotated.html  cell_8cpp.html  cell_8h.html  cell_8h_source.html  classCell-members.html  classCell.html  classClipDialog-members.html  classClipDialog.html  classHelpDialog-members.html  classHelpDialog.html  classHexahedron-members.html  classHexahedron.html  classMainWindow-members.html  classMainWindow.html  classMaterial-members.html  classMaterial.html  classMatrix3x3-members.html  classMatrix3x3.html  classModel-members.html  classModel.html  classPyramid-members.html  classPyramid.html  classTetrahedron-members.html  classTetrahedron.html  classVector3D-members.html  classVector3D.html  classes.html  clipdialog_8cpp.html  clipdialog_8h.html  clipdialog_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_99d0482cf009f9d97a0877749b817f19.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  (+24 more)
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  pages_1.js  pages_2.js  related_0.js  search.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js
include/: cell.h  material.h  matrix.h  model.h  vector.h  vector3d.h
src/: cell.cpp  main.cpp  material.cpp  matrix.cpp  modeel.cpp  model.cpp  vector.cpp  vector3d.cpp
src/gui/: clipdialog.cpp  clipdialog.h  clipdialog.ui  clipdialog.ui.autosave  helpdialog.cpp  helpdialog.h  helpdialog.ui  mainwindow.1.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  prev-main.cpp
src/gui/icons/: icons.qrc
tests/: ExampleModel.mod  main.cpp  test.mod  test_cell.cpp  test_material.cpp  test_model.cpp  test_vector.cpp
tests/vector/: README.md  test_vector.cpp
